--- a/#src/_footer.html
+++ b/#src/_footer.html
@@ -1,9 +1,9 @@
 <!--footer-->
 @@if (main == true) {
-<footer class="footer footer--main fixed-block">
+<footer class="footer footer--main">
     }
     @@if (main == false) {
-    <footer class="footer fixed-block">
+    <footer class="footer">
         }
         <div class="container">
             <div class="footer__inner">
