--- a/kreanopolis/main.html
+++ b/kreanopolis/main.html
@@ -850,7 +850,7 @@
             </main>
             <!--footer-->
 
-<footer class="footer footer--main fixed-block">
+<footer class="footer footer--main">
     
     
         <div class="container">
