--- a/kreanopolis/notfound.html
+++ b/kreanopolis/notfound.html
@@ -194,7 +194,7 @@
             <!--footer-->
 
     
-    <footer class="footer fixed-block">
+    <footer class="footer">
         
         <div class="container">
             <div class="footer__inner">
