--- a/#src/_modal.html
+++ b/#src/_modal.html
@@ -189,7 +189,7 @@
                         <div class="item-form">
                             <label class="item-checkbox">
                                 <input type="checkbox" name="agree" class="required">
-                                <span>Согласие на обработку персональных данных</span>
+                                <span>Согласие на обработку <a href="#"target="_blank">персональных данных</a></span>
                             </label>
                             <span data-error></span>
                         </div>
