--- a/kreanopolis/main.html
+++ b/kreanopolis/main.html
@@ -731,50 +731,46 @@
                     <div class="container">
                         <div class="sec-inner">
                             <div class="sec-top">
-                                <h3 class="sec-title">Подарок</h3>
+                                <h3 class="sec-title">Приз за лучший проект</h3>
                             </div>
-                            <div class="present-block__row">
-                                <div class="sec-content">
-                                    <h5>По результатом прохождения акселератора лучший проект получит подарок от агентства Norma — cертификат на обучение в школе управления
-                                        Сколково.</h5>
-                                    <h5>А также разработку брендбука от агентства Norma. </h5>
-                                    <p class="h5">В брендбук входят:</p>
-                                    <ul class="star-list split-list">
-                                        <li>
-                                            <svg><use xlink:href="img/svg/sprite.svg#star"></use></svg>
-                                            <span>Логотип</span>
-                                        </li>
-                                        <li>
-                                            <svg><use xlink:href="img/svg/sprite.svg#star"></use></svg>
-                                            <span>Цветовая палитра</span>
-                                        </li>
-                                        <li>
-                                            <svg><use xlink:href="img/svg/sprite.svg#star"></use></svg>
-                                            <span>Шрифтовая пара</span>
-                                        </li>
-                                        <li>
-                                            <svg><use xlink:href="img/svg/sprite.svg#star"></use></svg>
-                                            <span>Графические элементы</span>
-                                        </li>
-                                        <li>
-                                            <svg><use xlink:href="img/svg/sprite.svg#star"></use></svg>
-                                            <span>Стиль коммуникации бренда</span>
-                                        </li>
-                                        <li>
-                                            <svg><use xlink:href="img/svg/sprite.svg#star"></use></svg>
-                                            <span>Инструкции по правильному применению логотипа, цветов, шрифтов и других элементов</span>
-                                        </li>
-                                        <li>
-                                            <svg><use xlink:href="img/svg/sprite.svg#star"></use></svg>
-                                            <span>Примеры использования бренда на различных носителях (визитки, полиграфия, рекламные материалы)</span>
-                                        </li>
-                                    </ul>
-                                </div>
-                                <div class="present-block__logo">
-                                    <img src="img/svg/stolkovo.svg" alt="Столково">
-                                </div>
+                            <div class="sec-content">
+                                <h5>По результатом прохождения акселератора лучший проект получит подарок от агентства Norma — cертификат на обучение в школе управления
+                                    Сколково.</h5>
+                                <h5>А также разработку брендбука от агентства Norma. </h5>
+                                <p class="h5">В брендбук входят:</p>
+                                <ul class="star-list split-list">
+                                    <li>
+                                        <svg><use xlink:href="img/svg/sprite.svg#star"></use></svg>
+                                        <span>Логотип</span>
+                                    </li>
+                                    <li>
+                                        <svg><use xlink:href="img/svg/sprite.svg#star"></use></svg>
+                                        <span>Цветовая палитра</span>
+                                    </li>
+                                    <li>
+                                        <svg><use xlink:href="img/svg/sprite.svg#star"></use></svg>
+                                        <span>Шрифтовая пара</span>
+                                    </li>
+                                    <li>
+                                        <svg><use xlink:href="img/svg/sprite.svg#star"></use></svg>
+                                        <span>Графические элементы</span>
+                                    </li>
+                                    <li>
+                                        <svg><use xlink:href="img/svg/sprite.svg#star"></use></svg>
+                                        <span>Стиль коммуникации бренда</span>
+                                    </li>
+                                    <li>
+                                        <svg><use xlink:href="img/svg/sprite.svg#star"></use></svg>
+                                        <span>Инструкции по правильному применению логотипа, цветов, шрифтов и других элементов</span>
+                                    </li>
+                                    <li>
+                                        <svg><use xlink:href="img/svg/sprite.svg#star"></use></svg>
+                                        <span>Примеры использования бренда на различных носителях (визитки, полиграфия, рекламные материалы)</span>
+                                    </li>
+                                </ul>
                             </div>
                         </div>
+                        <img class="sec-bg" src="img/svg/present-bg.svg" alt>
                     </div>
                 </section>
                 <!--required-sec-->
